--- a/website/index.html
+++ b/website/index.html
@@ -3,16 +3,14 @@
 <head>
    <title>Gray box demo</title>
    <link rel="stylesheet" type="text/css" href="style.css"/>
+   <link rel="icon" type="image/png" href="favicon.png" />
 </head>
 <body>
-   <div class="logoVisualsWrapper">
-      <div class="box"></div>
-      <div class="ladder upper"></div>
-      <div class="ladder shadow"></div>
-      <div class="ladder lower"></div>
+   <div class="logo">
+      <img src="images/step-stool-512.png" />
+      <h1>Step Stool</h1>
    </div>
    <div class="logoTextWrapper">
-      <h1>Step Stool</h1>
       <h2>A(nother) static site generator.</h2>
    </div>
 </body>
