Add reset and begin styling elements.

--- a/website/index.html
+++ b/website/index.html
@@ -1,17 +1,28 @@
 <!doctype html>
 <html>
 <head>
-   <title>Gray box demo</title>
-   <link rel="stylesheet" type="text/css" href="style.css"/>
+   <title>Step Stool - a(nother) static site generator.</title>
+
+   <link rel="stylesheet" type="text/css" href="style.css" />
+   <link rel='stylesheet' type='text/css' href='http://fonts.googleapis.com/css?family=Jockey+One|Open+Sans:300italic,400italic,700italic,400,300,700'>
+
    <link rel="icon" type="image/png" href="favicon.png" />
 </head>
 <body>
-   <div class="logo">
-      <img src="images/step-stool-512.png" />
-      <h1>Step Stool</h1>
+   <div class="logoWrapper">
+      <h1>
+         <img src="images/step-stool-512.png" />
+         <span class="gray">Step</span> <span class="blue">Stool</span>
+      </h1>
    </div>
    <div class="logoTextWrapper">
       <h2>A(nother) static site generator.</h2>
+      <ul>
+         <li><a href="">about</a></li>
+         <li><a href="">download</a></li>
+         <li><a href="">docs</a></li>
+         <li><a href="http://bitbucket.org/chriskrycho/step-stool/">source</a></li>
+      </ul>
    </div>
 </body>
 </html>
