First working version of overall site layout.

--- a/website/index.html
+++ b/website/index.html
@@ -3,26 +3,40 @@
 <head>
    <title>Step Stool - a(nother) static site generator.</title>
 
-   <link rel="stylesheet" type="text/css" href="style.css" />
+   <link rel='stylesheet' type='text/css' href='style.css' />
    <link rel='stylesheet' type='text/css' href='http://fonts.googleapis.com/css?family=Jockey+One|Open+Sans:300italic,400italic,700italic,400,300,700'>
 
-   <link rel="icon" type="image/png" href="favicon.png" />
+   <link rel='icon' type='image/png' href='favicon.png' />
+
+   <link rel='author' href='https://plus.google.com/100517719789069874571/' />
+   <link rel='me' href='https://alpha.app.net/chriskrycho' data-type='follow' data-user-id='@chriskrycho' />
+   <meta name='twitter:site' content='@chriskrycho'/>
+   <meta name='twitter:creator' content='@chriskrycho'/>
 </head>
 <body>
-   <div class="logoWrapper">
-      <h1>
-         <img src="images/step-stool-512.png" />
-         <span class="gray">Step</span> <span class="blue">Stool</span>
-      </h1>
-   </div>
-   <div class="logoTextWrapper">
-      <h2>A(nother) static site generator.</h2>
-      <ul>
-         <li><a href="">about</a></li>
-         <li><a href="">download</a></li>
-         <li><a href="">docs</a></li>
-         <li><a href="http://bitbucket.org/chriskrycho/step-stool/">source</a></li>
-      </ul>
+   <div class='index wrapper'>
+      <div class='left'>
+         <div class='logoWrapper'>
+            <h1>
+               <img src='images/step-stool-512.png' />
+               <span class='gray'>Step</span> <span class='blue'>Stool</span>
+            </h1>
+         </div>
+      </div>
+      <div class='right'>
+         <div class='descriptionWrapper'>
+            <h2>
+               A<span class='blue microspaceBefore'>(</span>nother<span class='blue'>)</span> static site generator.<br/>
+               <span class='microspaceAfter'>(</span><span class='blue'>This one's in Python.</span>)
+            </h2>
+         </div>
+         <ul>
+            <li><a href=''>about</a></li>
+            <li><a href=''>download</a></li>
+            <li><a href=''>docs</a></li>
+            <li><a href='http://bitbucket.org/chriskrycho/step-stool/'>source</a></li>
+         </ul>
+      </div>
    </div>
 </body>
 </html>
