More basic classes.

--- a/website/index.html
+++ b/website/index.html
@@ -26,8 +26,8 @@
       <div class='right'>
          <div class='descriptionWrapper'>
             <h2>
-               A<span class='blue microspaceBefore'>(</span>nother<span class='blue'>)</span> static site generator.<br/>
-               <span class='microspaceAfter'>(</span><span class='blue'>This one's in Python.</span>)
+               A<span class='blue microspaceBefore w400'>(</span>nother<span class='blue w400'>)</span> static site generator.<br/>
+               <span class='microspaceAfter'>(</span><span class='blue italic'>This one's in Python.</span>)
             </h2>
          </div>
          <ul>
