--- a/website/index.html
+++ b/website/index.html
@@ -8,10 +8,23 @@
 
    <link rel='icon' type='image/png' href='favicon.png' />
 
+   <!-- Social media identification/etc. -->
    <link rel='author' href='https://plus.google.com/100517719789069874571/' />
+
    <link rel='me' href='https://alpha.app.net/chriskrycho' data-type='follow' data-user-id='@chriskrycho' />
-   <meta name='twitter:site' content='@chriskrycho'/>
+
+   <meta name='twitter:site' content='@stepstool'/>
    <meta name='twitter:creator' content='@chriskrycho'/>
+   <meta name='twitter:url' content='http://step-stool.io' />
+   <meta name='twitter:card' content='summary' />
+   <meta name='twitter:description' content='A(nother) static site generator. This one is in Python.' />
+   <meta name='twitter:image' content='http://step-stool.io/images/step-stool-256.png' />
+
+   <meta property='og:site_name' content='step-stool.io' />
+   <meta property='og:type' content='website' />
+   <meta property='og:url' content='http://step-stool.io' />
+   <meta property='og:image' content='http://step-stool.io/images/step-stool-256.png' />
+   <meta property='fb:admins' content='9624075' />
 </head>
 <body>
    <div class='index wrapper'>
@@ -27,7 +40,7 @@
          <div class='descriptionWrapper'>
             <h2>
                A<span class='blue microspaceBefore w400'>(</span>nother<span class='blue w400'>)</span> static site generator.<br/>
-               <span class='microspaceAfter'>(</span><span class='blue italic'>This one's in Python.</span>)
+               <span class='microspaceAfter'>(</span><span class='blue italic'>This one is in Python.</span>)
             </h2>
          </div>
          <ul>
