Switch Open Graph meta tags to validate as HTML5 instead of as Open Graph. (That's on Facebook to fix.)

--- a/website/index.html
+++ b/website/index.html
@@ -15,16 +15,17 @@
 
    <meta name='twitter:site' content='@stepstool'/>
    <meta name='twitter:creator' content='@chriskrycho'/>
+   <meta name='twitter:title' content='Step Stool' />
    <meta name='twitter:url' content='http://step-stool.io' />
    <meta name='twitter:card' content='summary' />
    <meta name='twitter:description' content='A(nother) static site generator. This one is in Python.' />
    <meta name='twitter:image' content='http://step-stool.io/images/step-stool-256.png' />
 
-   <meta property='og:site_name' content='step-stool.io' />
-   <meta property='og:type' content='website' />
-   <meta property='og:url' content='http://step-stool.io' />
-   <meta property='og:image' content='http://step-stool.io/images/step-stool-256.png' />
-   <meta property='fb:admins' content='9624075' />
+   <meta name='og:site_name' content='step-stool.io' />
+   <meta name='og:type' content='website' />
+   <meta name='og:url' content='http://step-stool.io' />
+   <meta name='og:image' content='http://step-stool.io/images/step-stool-256.png' />
+   <meta name='fb:admins' content='9624075' />
 </head>
 <body>
    <div class='index wrapper'>
