--- a/website/index.html
+++ b/website/index.html
@@ -1,6 +1,8 @@
 <!doctype html>
 <html>
 <head>
+   <meta charset='utf-8' />
+
    <title>Step Stool - a(nother) static site generator.</title>
 
    <link rel='stylesheet' type='text/css' href='style.css' />
@@ -32,7 +34,7 @@
       <div class='left'>
          <div class='logoWrapper'>
             <h1>
-               <img src='images/step-stool-256.png' />
+               <img src='images/step-stool-256.png' alt='Step Stool logo' />
                <span class='gray'>Step</span> <span class='blue'>Stool</span>
             </h1>
          </div>
