Create about page. Fix height issues (use min-height rather than height) for content.

--- a/website/about.html
+++ b/website/about.html
@@ -1,9 +1,9 @@
-<!doctype html>
+<!DOCTYPE html>
 <html>
 <head>
    <meta charset='utf-8' />
 
-   <title>Step Stool - a(nother) static site generator.</title>
+   <title>About - Step Stool</title>
 
    <link rel='stylesheet' type='text/css' href='style.css' />
    <link rel='stylesheet' type='text/css' href='http://fonts.googleapis.com/css?family=Jockey+One|Open+Sans:300italic,400italic,700italic,400,300,700'>
@@ -17,21 +17,21 @@
 
    <meta name='twitter:site' content='@stepstool'/>
    <meta name='twitter:creator' content='@chriskrycho'/>
-   <meta name='twitter:title' content='Step Stool' />
-   <meta name='twitter:description' content='A(nother) static site generator. This one is in Python.' />
+   <meta name='twitter:title' content='About - Step Stool' />
+   <meta name='twitter:description' content='' />
    <meta name='twitter:url' content='http://step-stool.io' />
    <meta name='twitter:card' content='summary' />
    <meta name='twitter:image' content='http://step-stool.io/images/step-stool-256.png' />
 
    <meta name='fb:admins' content='9624075' />
-   <meta name='og:site_name' content='step-stool.io' />
-   <meta name='og:description' content='A(nother) static site generator. This one is in Python.' />
+   <meta name='og:site_name' content='About - Step Stool' />
+   <meta name='og:description' content='' />
    <meta name='og:type' content='website' />
    <meta name='og:url' content='http://step-stool.io' />
    <meta name='og:image' content='http://step-stool.io/images/step-stool-256.png' />
 </head>
 <body>
-   <div class='index wrapper'>
+   <div class='content wrapper'>
       <div class='left'>
          <div class='logoWrapper'>
             <h1>
