--- a/website/about.html
+++ b/website/about.html
@@ -43,7 +43,7 @@
       <div class='right'>
          <div class='descriptionWrapper'>
             <h2>
-               A<span class='blue microspaceBefore w400'>(</span>nother<span class='blue w400'>)</span> static site generator.<br/>
+               A<span class='blue microspaceBefore w400'>(</span>nother<span class='blue w400'>)</span> static site generator.</span><br class="optionalBreak" />
                <span class='microspaceAfter'>(</span><span class='blue italic'>This one is in Python.</span>)
             </h2>
          </div>
