Style, layout, and modular scale import changes. - Rename 'content' to 'page' wrapper - Move navigation on page (not index) to left block - Fix header size values and set margin in a more sensible location - Add modular scale file and fill out the rest of the scale values.

--- a/website/about.html
+++ b/website/about.html
@@ -31,7 +31,7 @@
    <meta name='og:image' content='http://step-stool.io/images/step-stool-256.png' />
 </head>
 <body>
-   <div class='content wrapper'>
+   <div class='page wrapper'>
       <div class='left'>
          <div class='logoWrapper'>
             <h1>
@@ -39,6 +39,12 @@
                <span class='gray'>Step</span> <span class='blue'>Stool</span>
             </h1>
          </div>
+         <ul>
+            <li><a href='about.html'>about</a></li>
+            <li><a href=''>download</a></li>
+            <li><a href=''>docs</a></li>
+            <li><a href='http://bitbucket.org/chriskrycho/step-stool/'>source</a></li>
+         </ul>
       </div>
       <div class='right'>
          <div class='descriptionWrapper'>
@@ -47,12 +53,6 @@
                <span class='microspaceAfter'>(</span><span class='blue italic'>This one is in Python.</span>)
             </h2>
          </div>
-         <ul>
-            <li><a href='about.html'>about</a></li>
-            <li><a href=''>download</a></li>
-            <li><a href=''>docs</a></li>
-            <li><a href='http://bitbucket.org/chriskrycho/step-stool/'>source</a></li>
-         </ul>
       </div>
    </div>
 </body>
