Style updates for content wrapper, headings, and links, and some content for the 'About' page.

--- a/website/about.html
+++ b/website/about.html
@@ -53,7 +53,11 @@
                <span class='microspaceAfter'>(</span><span class='blue italic'>This one is in Python.</span>)
             </h2>
          </div>
-      </div>
+         <div class='content'>
+            <p>Step Stool is a simple static site generator. You write your content in <a href="http://daringfireball.net/projects/markdown/">Markdown</a>, run a quick command line script, and it gets published to the web. No content management system, no database, just simple HTML files.</p>
+            <p>Step Stool supports custom templates (via <a href="http://jinja.pocoo.org/" title="Jinja 2 Python Templating Language">Jinja2</a>), so you can make your site look pretty much however you want. You can apply different templates to different sections of your site, using a single line in a configuration file.</p>
+            <p>Step Stool also allows you to structure your site pretty much however you choose. If you want to have nested categories, go for it. If you want an entirely flat structure with an ever-growing list of tags, you can do that, too.</p>      </div>
+         </div>
    </div>
 </body>
 </html>
