Nav menu and content link styles.

--- a/website/index.html
+++ b/website/index.html
@@ -47,12 +47,14 @@
                <span class='microspaceAfter'>(</span><span class='blue italic'>This one is in Python.</span>)
             </h2>
          </div>
-         <ul>
-            <li><a href='about.html'>about</a></li>
-            <li><a href=''>download</a></li>
-            <li><a href=''>docs</a></li>
-            <li><a href='http://bitbucket.org/chriskrycho/step-stool/'>source</a></li>
-         </ul>
+         <nav>
+            <ul class="mainNav">
+               <li><a href='about.html'>about</a></li>
+               <li><a href=''>download</a></li>
+               <li><a href=''>docs</a></li>
+               <li><a href='http://bitbucket.org/chriskrycho/step-stool/'>source</a></li>
+            </ul>
+         </nav>
       </div>
    </div>
 </body>
