--- a/website/about.html
+++ b/website/about.html
@@ -39,17 +39,19 @@
                <span class='gray'>Step</span> <span class='blue'>Stool</span>
             </h1>
          </div>
-         <ul>
-            <li><a href='about.html'>about</a></li>
-            <li><a href=''>download</a></li>
-            <li><a href=''>docs</a></li>
-            <li><a href='http://bitbucket.org/chriskrycho/step-stool/'>source</a></li>
-         </ul>
+         <nav>
+            <ul class="mainNav">
+               <li><a href='about.html'>about</a></li>
+               <li><a href=''>download</a></li>
+               <li><a href=''>docs</a></li>
+               <li><a href='http://bitbucket.org/chriskrycho/step-stool/'>source</a></li>
+            </ul>
+         </nav>
       </div>
       <div class='right'>
          <div class='descriptionWrapper'>
             <h2>
-               A<span class='blue microspaceBefore w400'>(</span>nother<span class='blue w400'>)</span> static site generator.</span><br class="optionalBreak" />
+               A<span class='blue microspaceBefore w400'>(</span>nother<span class='blue w400'>)</span> static site generator.</span> <br class="optionalBreak" />
                <span class='microspaceAfter'>(</span><span class='blue italic'>This one is in Python.</span>)
             </h2>
          </div>
