--- a/website/about.html
+++ b/website/about.html
@@ -35,8 +35,10 @@
       <div class='left'>
          <div class='logoWrapper'>
             <h1>
-               <img src='images/step-stool-256.png' alt='Step Stool logo' />
-               <span class='gray'>Step</span> <span class='blue'>Stool</span>
+               <a href="/" class="logoLink">
+                  <img src='images/step-stool-256.png' alt='Step Stool logo' />
+                  <span class='gray'>Step</span> <span class='blue'>Stool</span>
+               </a>
             </h1>
          </div>
          <nav>
@@ -51,7 +53,7 @@
       <div class='right'>
          <div class='descriptionWrapper'>
             <h2>
-               A<span class='blue microspaceBefore w400'>(</span>nother<span class='blue w400'>)</span> static site generator.</span> <br class="optionalBreak" />
+               A<span class='blue microspaceBefore w400'>(</span>nother<span class='blue w400'>)</span> static site generator.</span>
                <span class='microspaceAfter'>(</span><span class='blue italic'>This one is in Python.</span>)
             </h2>
          </div>
