Absolute (on server) link locations and no .html in link names.

--- a/website/about.html
+++ b/website/about.html
@@ -5,10 +5,12 @@
 
    <title>About - Step Stool</title>
 
-   <link rel='stylesheet' type='text/css' href='style.css' />
+   <link rel='stylesheet' type='text/css' href='/style.css' />
    <link rel='stylesheet' type='text/css' href='http://fonts.googleapis.com/css?family=Jockey+One|Open+Sans:300italic,400italic,700italic,400,300,700'>
 
-   <link rel='icon' type='image/png' href='favicon.png' />
+   <link rel='icon' type='image/png' href='/favicon.png' />
+
+   <meta name='description' content='Write your content in Markdown, run a quick command line script, and publish to the web. No content management system, no database, just simple HTML.' />
 
    <!-- Social media identification/etc. -->
    <link rel='author' href='https://plus.google.com/100517719789069874571/' />
@@ -18,14 +20,14 @@
    <meta name='twitter:site' content='@stepstool'/>
    <meta name='twitter:creator' content='@chriskrycho'/>
    <meta name='twitter:title' content='About - Step Stool' />
-   <meta name='twitter:description' content='' />
+   <meta name='twitter:description' content='Write your content in Markdown, run a quick command line script, and publish to the web. No content management system, no database, just simple HTML.' />
    <meta name='twitter:url' content='http://step-stool.io' />
    <meta name='twitter:card' content='summary' />
    <meta name='twitter:image' content='http://step-stool.io/images/step-stool-256.png' />
 
    <meta name='fb:admins' content='9624075' />
    <meta name='og:site_name' content='About - Step Stool' />
-   <meta name='og:description' content='' />
+   <meta name='og:description' content='Write your content in Markdown, run a quick command line script, and publish to the web. No content management system, no database, just simple HTML.' />
    <meta name='og:type' content='website' />
    <meta name='og:url' content='http://step-stool.io' />
    <meta name='og:image' content='http://step-stool.io/images/step-stool-256.png' />
@@ -36,14 +38,14 @@
          <div class='logoWrapper'>
             <h1>
                <a href="/" class="logoLink">
-                  <img src='images/step-stool-256.png' alt='Step Stool logo' />
+                  <img src='/images/step-stool-256.png' alt='Step Stool logo' />
                   <span class='gray'>Step</span> <span class='blue'>Stool</span>
                </a>
             </h1>
          </div>
          <nav>
             <ul class="mainNav">
-               <li><a href='about.html'>about</a></li>
+               <li><a href='/about/'>about</a></li>
                <li><a href=''>download</a></li>
                <li><a href=''>docs</a></li>
                <li><a href='http://bitbucket.org/chriskrycho/step-stool/'>source</a></li>
