--- a/website/index.html
+++ b/website/index.html
@@ -5,10 +5,12 @@
 
    <title>Step Stool - a(nother) static site generator.</title>
 
-   <link rel='stylesheet' type='text/css' href='style.css' />
+   <link rel='stylesheet' type='text/css' href='/style.css' />
    <link rel='stylesheet' type='text/css' href='http://fonts.googleapis.com/css?family=Jockey+One|Open+Sans:300italic,400italic,700italic,400,300,700'>
 
-   <link rel='icon' type='image/png' href='favicon.png' />
+   <link rel='icon' type='image/png' href='/favicon.png' />
+
+   <meta name='description' content='A(nother) static site generator. (This one is in Python.)' />
 
    <!-- Social media identification/etc. -->
    <link rel='author' href='https://plus.google.com/100517719789069874571/' />
@@ -35,7 +37,7 @@
       <div class='left'>
          <div class='logoWrapper'>
             <h1>
-               <img src='images/step-stool-256.png' alt='Step Stool logo' />
+               <img src='/images/step-stool-256.png' alt='Step Stool logo' />
                <span class='gray'>Step</span> <span class='blue'>Stool</span>
             </h1>
          </div>
@@ -49,7 +51,7 @@
          </div>
          <nav>
             <ul class="mainNav">
-               <li><a href='about.html'>about</a></li>
+               <li><a href='/about/'>about</a></li>
                <li><a href=''>download</a></li>
                <li><a href=''>docs</a></li>
                <li><a href='http://bitbucket.org/chriskrycho/step-stool/'>source</a></li>
