Fix HTML validation error.

--- a/website/about.html
+++ b/website/about.html
@@ -55,7 +55,7 @@
       <div class='right'>
          <div class='descriptionWrapper'>
             <h2>
-               A<span class='blue microspaceBefore w400'>(</span>nother<span class='blue w400'>)</span> static site generator.</span>
+               A<span class='blue microspaceBefore w400'>(</span>nother<span class='blue w400'>)</span> static site generator.
                <span class='microspaceAfter'>(</span><span class='blue italic'>This one is in Python.</span>)
             </h2>
          </div>
