Some responsive reflow work.

--- a/website/about.html
+++ b/website/about.html
@@ -46,7 +46,7 @@
       </div>
       <div class='content right' id='descriptionWrapper'>
          <h2>
-            A<span class='blue microspaceBefore w400'>(</span>nother<span class='blue w400'>)</span> static site generator.
+            A<span class='blue microspaceBefore w400'>(</span>nother<span class='blue w400'>)</span> static site generator.<br class='optionalBreak' />
             <span class='microspaceAfter'>(</span><span class='blue italic'>This one is in Python.</span>)
          </h2>
       </div>
