Make responsive actually *work* on devices by setting meta tag. Only transition desired values on a tags.

--- a/website/index.html
+++ b/website/index.html
@@ -5,12 +5,14 @@
 
    <title>Step Stool - a(nother) static site generator.</title>
 
+   <meta name='description' content='A(nother) static site generator. (This one is in Python.)' />
+
    <link rel='stylesheet' type='text/css' href='/style.css' />
    <link rel='stylesheet' type='text/css' href='http://fonts.googleapis.com/css?family=Jockey+One|Open+Sans:300italic,400italic,700italic,400,300,700|Inconsolata'>
 
    <link rel='icon' type='image/png' href='/favicon.png' />
 
-   <meta name='description' content='A(nother) static site generator. (This one is in Python.)' />
+   <meta name="viewport" content="width=device-width, initial-scale=1">
 
    <!-- Social media identification/etc. -->
    <link rel='author' href='https://plus.google.com/100517719789069874571/' />
