--- a/website/about.html
+++ b/website/about.html
@@ -5,12 +5,14 @@
 
    <title>About - Step Stool</title>
 
+   <meta name='description' content='Write your content in Markdown, run a quick command line script, and publish to the web. No content management system, no database, just simple HTML.' />
+
    <link rel='stylesheet' type='text/css' href='/style.css' />
    <link rel='stylesheet' type='text/css' href='http://fonts.googleapis.com/css?family=Jockey+One|Open+Sans:300italic,400italic,700italic,400,300,700'>
 
    <link rel='icon' type='image/png' href='/favicon.png' />
 
-   <meta name='description' content='Write your content in Markdown, run a quick command line script, and publish to the web. No content management system, no database, just simple HTML.' />
+   <meta name="viewport" content="width=device-width, initial-scale=1">
 
    <!-- Social media identification/etc. -->
    <link rel='author' href='https://plus.google.com/100517719789069874571/' />
