Change website to reflect that I'm using Io instead of Python going forward.

--- a/website/about.html
+++ b/website/about.html
@@ -49,7 +49,7 @@
       <div class='content right' id='descriptionWrapper'>
          <h2>
             A<span class='blue microspaceBefore w400'>(</span>nother<span class='blue w400'>)</span> static site generator.<br class='optionalBreak' />
-            <span class='microspaceAfter'>(</span><span class='blue italic'>This one is in Python.</span>)
+            <span class='microspaceAfter'>(</span><span class='blue italic'>This one is in Io.</span>)
          </h2>
       </div>
       <nav class='content left' id='mainNav'>
@@ -62,8 +62,8 @@
       </nav>
       <div class='content right textBlock'>
          <article>
-            <p>Step Stool is a simple static site generator. You write your content in <a href="http://daringfireball.net/projects/markdown/">Markdown</a>, run a quick command line script, and it gets published to the web. No content management system, no database, just simple HTML files.</p>
-            <p>Step Stool supports custom templates (via <a href="http://jinja.pocoo.org/" title="Jinja 2 Python Templating Language">Jinja2</a>), so you can make your site look pretty much however you want. You can apply different templates to different sections of your site, using a single line in a configuration file.</p>
+            <p>Step Stool is a simple static site generator written in <a href="http://iolanguage.org">Io</a>. You write your content in <a href="http://daringfireball.net/projects/markdown/">Markdown</a>, run a quick command line script, and it gets published to the web. No content management system, no database, just simple HTML files.</p>
+            <p>Step Stool supports custom templates in an Io implementation of <a href="http://slim-lang.com">Slim</a>, so you can make your site look pretty much however you want. You can apply different templates to different sections of your site, using a single line in a configuration file.</p>
             <p>Step Stool also allows you to structure your site pretty much however you choose. If you want to have nested categories, go for it. If you want an entirely flat structure with an ever-growing list of tags, you can do that, too.</p>
          </article>
       </div>
