--- a/website/index.html
+++ b/website/index.html
@@ -5,7 +5,7 @@
 
    <title>Step Stool - a(nother) static site generator.</title>
 
-   <meta name='description' content='A(nother) static site generator. (This one is in Python.)' />
+   <meta name='description' content='A(nother) static site generator. (This one is in Io.)' />
 
    <link rel='stylesheet' type='text/css' href='/style.css' />
    <link rel='stylesheet' type='text/css' href='http://fonts.googleapis.com/css?family=Jockey+One|Open+Sans:300italic,400italic,700italic,400,300,700|Inconsolata'>
@@ -22,14 +22,14 @@
    <meta name='twitter:site' content='@stepstool'/>
    <meta name='twitter:creator' content='@chriskrycho'/>
    <meta name='twitter:title' content='Step Stool' />
-   <meta name='twitter:description' content='A(nother) static site generator. This one is in Python.' />
+   <meta name='twitter:description' content='A(nother) static site generator. This one is in Io.' />
    <meta name='twitter:url' content='http://step-stool.io' />
    <meta name='twitter:card' content='summary' />
    <meta name='twitter:image' content='http://step-stool.io/images/step-stool-256.png' />
 
    <meta name='fb:admins' content='9624075' />
    <meta name='og:site_name' content='step-stool.io' />
-   <meta name='og:description' content='A(nother) static site generator. This one is in Python.' />
+   <meta name='og:description' content='A(nother) static site generator. This one is in Io.' />
    <meta name='og:type' content='website' />
    <meta name='og:url' content='http://step-stool.io' />
    <meta name='og:image' content='http://step-stool.io/images/step-stool-256.png' />
@@ -47,7 +47,7 @@
       <div class='content right' id='descriptionWrapper'>
          <h2>
             A<span class='blue microspaceBefore w400'>(</span>nother<span class='blue w400'>)</span> static site generator.<br />
-            <span class='microspaceAfter'>(</span><span class='blue italic'>This one is in Python.</span>)
+            <span class='microspaceAfter'>(</span><span class='blue italic'>This one is in Io.</span>)
          </h2>
       </div>
       <nav class='content right' id='mainNav'>
