--- a/about.html
+++ b/about.html
@@ -54,10 +54,10 @@
       </div>
       <nav class='content left' id='mainNav'>
          <ul class="nav">
-            <li><a href='/about/'>about</a></li>
-            <li><a href=''>download</a></li>
-            <li><a href=''>docs</a></li>
-            <li><a href='http://bitbucket.org/chriskrycho/step-stool/'>source</a></li>
+            <li><a href='/about.html'>about</a></li>
+            <li>download (TBD)</li>
+            <li>docs(TBD)</li>
+            <li><a href='https://github.com/chriskrycho/step-stool/'>source</a></li>
          </ul>
       </nav>
       <div class='content right textBlock'>
